fixed PostCard component not centered at media <430px added Search page and simple api handler for testing added useDebounce hooks for delaying search typing and data fetching added active class to navbar links

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,3 +4,11 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
+
+#__next {
+  position: relative;
+}
+
+.active {
+  @apply text-primary-600 font-bold;
+}
