feat(print): improve styling (see details)
- adjusted the laravel article to test the styling
- add 2cm margin for each pages
- add border to profile picture frame to make it look stand out when the
  background is white
- add ImageWithFrame component to add caption for images
- remove footer when printing the page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,21 @@ pre > code > span.line:not(:only-child):before {
   min-width: 1.5em;
   text-align: right;
 }
+
+@media print {
+  @page {
+    margin: 2cm 1cm;
+  }
+
+  /* make the wrapped code looks better */
+  span.line {
+    display: inline-block;
+    margin-left: 1cm;
+    text-indent: -1cm;
+  }
+
+  p,
+  li {
+    page-break-inside: avoid;
+  }
+}
